# vd_agent_win

./: .gitlab-ci.yml  CHANGELOG.md  Makefile.am  configure.ac  mingw-spice-vdagent.spec.in  spice-vdagent.wxs.in  test-shell
common/: vdcommon.cpp  vdcommon.h  vdlog.cpp  vdlog.h
m4/: pushvars.m4
vdagent/: as_user.cpp  display_configuration.cpp  display_configuration.h  display_setting.cpp  file_xfer.cpp  file_xfer.h  image.cpp  image.h  imagetest.cpp  shell.cpp  shell.h  test-shell.cpp  vdagent.cpp  vdagent.rc  vdagent.vcproj
vdservice/: vdservice.cpp  vdservice.rc  vdservice.vcproj
